# simple-seo-crawler

./: .gitignore  README.md  gui.py  process.py  pyproject.toml
basic_seo_crawler/: output.csv  scrapy.cfg
basic_seo_crawler/basic_seo_crawler/: items.py  middlewares.py  pipelines.py  settings.py
basic_seo_crawler/basic_seo_crawler/spiders/: seo_spider.py
