[tool.poetry]
name = "seo_crawler"
version = "0.1.0"
description = "A basic SEO crawler that crawls through a site and scrapes relevant information."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
scrapy = "1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
